--- a/index.html
+++ b/index.html
@@ -2,86 +2,197 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Social Media Dashboard With Theme Switcher</title>
 </head>
-<body>
-
-  Social Media Dashboard
-  Total Followers: 23,004
-
-  Dark Mode
-
-  
-
-  @nathanf
-  1987
-  Followers
-  12 Today
-
-  @nathanf
-  1044
-  Followers
-  99 Today
-
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
-
-
-
-  Overview - Today
-
-  Page Views
-  87
-  3%
-
-  Likes
-  52
-  2%
-
-  Likes
-  5462
-  2257%
-
-  Profile Views
-  52k
-  1375%
-
-  Retweets
-  117
-  303%
-
-  Likes
-  507
-  553%
-
-  Likes
-  107
-  19%
-
-  Total Views
-  1407
-  12%
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+<body id="app">
+  <header id="header">
+    <div class="heading">
+      <h2 id="dashboard-heading">Social Media Dashboard</h2>
+      <small id="total-followers">Total Followers: 23,004</small>
+    </div>
+    <div class="theme-switcher">
+      <small class="toggle-label">Dark Mode</small>
+      <label class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </label>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <div class="grid-layout">
+        <div class="card facebook" id="card">
+          <div class="flex-layout center">
+            <img src="images/icon-facebook.svg">
+            <small class="handle">@nathanf</small>
+          </div>
+          <h1 class="number">1987</h1>
+          <p class="followers">Followers</p>
+          <div class="flex-layout center">
+            <img class="arrow" src="images/icon-up.svg">
+            <small class="stats increase">12 Today</small>
+          </div>
+        </div>
+        <div class="card twitter">
+          <div class="flex-layout center">
+            <img src="images/icon-twitter.svg">
+            <small class="handle">@nathanf</small>
+          </div>
+          <h1 class="number">1044</h1>
+          <p class="followers">Followers</p>
+          <div class="flex-layout center">
+            <img class="arrow" src="images/icon-up.svg">
+            <small class="stats increase">99 Today</small>
+          </div>
+        </div>
+        <div class="card instagram">
+          <div class="flex-layout center">
+            <img src="images/icon-instagram.svg">
+            <small class="handle">@realnathanf</small>
+          </div>
+          <h1 class="number">11k</h1>
+          <p class="followers">Followers</p>
+          <div class="flex-layout center">
+            <img class="arrow" src="images/icon-up.svg">
+            <small class="stats increase">1099 Today</small>
+          </div>
+        </div>
+        <div class="card youtube">
+          <div class="flex-layout center">
+            <img src="images/icon-youtube.svg">
+            <small class="handle">Nathan F.</small>
+          </div>
+          <h1 class="number">8239</h1>
+          <p class="followers">Subscribers</p>
+          <div class="flex-layout center">
+            <img src="images/icon-down.svg">
+            <small class="stats decrease">144 Today</small>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <h3 id="overview">Overview - Today</h3>
+      <div class="grid-layout">
+        <div class="small-card">
+          <div class="flex-layout space-between">
+            <p class="overview-card-heading">Page Views</p>
+            <img src="images/icon-facebook.svg">
+          </div>
+          <div class="flex-layout space-between bottom">
+            <h2 class="number">87</h2>
+            <div class="flex-layout center">
+              <img class="arrow" src="images/icon-up.svg">
+              <small class="stats increase">3%</small>
+            </div>
+          </div>
+        </div>
+        <div class="small-card">
+          <div class="flex-layout space-between">
+            <p class="overview-card-heading">Likes</p>
+            <img src="images/icon-facebook.svg">
+          </div>
+          <div class="flex-layout space-between bottom">
+            <h2 class="number">52</h2>
+            <div class="flex-layout center">
+              <img class="arrow" src="images/icon-down.svg">
+              <small class="stats decrease">2%</small>
+            </div>
+          </div>
+        </div>
+        <div class="small-card">
+          <div class="flex-layout space-between">
+            <p class="overview-card-heading">Likes</p>
+            <img src="images/icon-instagram.svg">
+          </div>
+          <div class="flex-layout space-between bottom">
+            <h2 class="number">5462</h2>
+            <div class="flex-layout center">
+              <img class="arrow" src="images/icon-up.svg">
+              <small class="stats increase">2257%</small>
+            </div>
+          </div>
+        </div>
+        <div class="small-card">
+          <div class="flex-layout space-between">
+            <p class="overview-card-heading">Profile Views</p>
+            <img src="images/icon-instagram.svg">
+          </div>
+          <div class="flex-layout space-between bottom">
+            <h2 class="number">52k</h2>
+            <div class="flex-layout center">
+              <img class="arrow" src="images/icon-up.svg">
+              <small class="stats increase">1375%</small>
+            </div>
+          </div>
+        </div>
+        <div class="small-card">
+          <div class="flex-layout space-between">
+            <p class="overview-card-heading">Retweets</p>
+            <img src="images/icon-twitter.svg">
+          </div>
+          <div class="flex-layout space-between bottom">
+            <h2 class="number">117</h2>
+            <div class="flex-layout center">
+              <img class="arrow" src="images/icon-up.svg">
+              <small class="stats increase">303%</small>
+            </div>
+          </div>
+        </div>
+        <div class="small-card">
+          <div class="flex-layout space-between">
+            <p class="overview-card-heading">Likes</p>
+            <img src="images/icon-twitter.svg">
+          </div>
+          <div class="flex-layout space-between bottom">
+            <h2 class="number">507</h2>
+            <div class="flex-layout center">
+              <img class="arrow" src="images/icon-up.svg">
+              <small class="stats increase">553%</small>
+            </div>
+          </div>
+        </div>
+        <div class="small-card">
+          <div class="flex-layout space-between">
+            <p class="overview-card-heading">Likes</p>
+            <img src="images/icon-youtube.svg">
+          </div>
+          <div class="flex-layout space-between bottom">
+            <h2 class="number">107</h2>
+            <div class="flex-layout center">
+              <img class="arrow" src="images/icon-down.svg">
+              <small class="stats decrease">19%</small>
+            </div>
+          </div>
+        </div>
+        <div class="small-card">
+          <div class="flex-layout space-between">
+            <p class="overview-card-heading">Total Views</p>
+            <img src="images/icon-youtube.svg">
+          </div>
+          <div class="flex-layout space-between bottom">
+            <h2 class="number">1407</h2>
+            <div class="flex-layout center">
+              <img class="arrow" src="images/icon-down.svg">
+              <small class="stats decrease">12%</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer id="footer">
+    <div class="attribution">
+      <p>
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Nick Korintus</a>.
+      </p>
+    </div>
+  </footer>
 </body>
+<script type="text/javascript" src="script.js"></script>
 </html>
